test/fail/enums_and_variants/enum_implicit_new.lily
#[
SyntaxError: Cannot implicitly use the constructor of an enum.
    from enum_implicit_new.lily:6:
]#

var v = Option(10)
